commit the link to 919304864237

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     </body>
 
     <footer>
-        <h6>Want to create your own Birthday GIFT site? Contact <a href="https://wa.me/qr/ll3Q56DRLLNGF1">Me</a></h6>
+        <h6>Want to create your own Birthday GIFT site? Contact <a href="https://wa.me/919304864237">Me</a></h6>
     </footer>
 </html>
